<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="5dp"
  	android:orientation="vertical">
	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	    <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/name_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/name_value"
	            android:text="@string/name_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
	    </TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/host_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/host_value"
	            android:text="@string/host_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
		</TableRow>	        
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/place_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/place_value"
	            android:text="@string/place_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
		</TableRow>	        
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/street_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/street_value"
	            android:text="@string/street_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
		</TableRow>	        
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/plz_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/plz_value"
	            android:text="@string/plz_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
		</TableRow>	        
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/city_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/city_value"
	            android:text="@string/city_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
	    </TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/state_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/state_value"
	            android:text="@string/state_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
	    </TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/link_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/link_value"
	            android:text="@string/link_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"
	            android:maxWidth="300dp"/>
	    </TableRow>	    
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/source_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/source_value"
	            android:text="@string/source_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
	    </TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/start_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/start_value"
	            android:text="@string/start_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
	    </TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip" >
	        <TextView
	            android:text="@string/end_text"
	            android:textSize="18sp"/>
	        <EditText
	            android:id="@+id/end_value"
	            android:text="@string/end_value"
	            android:inputType="text" 
	            android:layout_marginLeft="10dp"/>
	    </TableRow>	    	    
	</TableLayout>
  	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:layout_marginTop="10dp">
    	<Button
	      	android:id="@+id/btn_edit_apply"
	      	android:text="@string/btn_edit_apply"
	      	android:textSize="16sp"
	      	android:textStyle="bold"
	     	android:minWidth="100dp"
	      	android:layout_height="wrap_content" 
	      	android:layout_width="wrap_content"/>
	    <Button
	      	android:id="@+id/btn_edit_discard"
	      	android:text="@string/btn_edit_discard"
	      	android:textSize="16sp"
	      	android:textStyle="bold"
	      	android:minWidth="100dp"
	      	android:layout_height="wrap_content"
	      	android:layout_width="wrap_content"/>
  	</LinearLayout>
</LinearLayout>