<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="4dp" >
      <EditText
          android:id="@+id/address_text"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/address_text"
          android:inputType="text"
          android:textSize="16sp" />
      <ImageButton
          android:id="@+id/search_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:src="@drawable/ic_search"/>
    </LinearLayout> 
    <LinearLayout android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
      <Button
          android:id="@+id/search_meetups_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/search_meetups_button"/>
      <Button
          android:id="@+id/add_meetup_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/add_meetup_button"/>
    </LinearLayout>    
    <com.esri.android.map.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
</LinearLayout>
